@@ -3,5 +3,6 @@
 *******************************************************************************
 
 === 1.0.0 ===
-
 * TODO: write chanes here as a dot list.
+* Updated build scripts and dependencies.
+
